--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "The Brauxelcode Sandbox",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack",
+    "start": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,17 @@
   "bugs": {
     "url": "https://github.com/Milo1184/sandbox.thebrauxelcode.com/issues"
   },
-  "homepage": "https://github.com/Milo1184/sandbox.thebrauxelcode.com#readme"
+  "homepage": "https://github.com/Milo1184/sandbox.thebrauxelcode.com#readme",
+  "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "html-webpack-plugin": "^2.28.0",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "webpack": "^2.5.0",
+    "webpack-dev-server": "^2.4.5"
+  }
 }
